@startuml LBaraka

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam backgroundColor #FAFAFA
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #4A90D9
  HeaderBackgroundColor #4A90D9
  HeaderFontColor #FFFFFF
  ArrowColor #555555
}
skinparam enum {
  BackgroundColor #FFF8E1
  BorderColor #F9A825
  HeaderBackgroundColor #F9A825
  HeaderFontColor #FFFFFF
}

' ─────────────── ENUMS ───────────────

enum RoleUtilisateur {
  CITOYEN
  PARTENAIRE
  ADMINISTRATEUR
  PARTENAIRES
  PARTENAIRE_ADMIN
  PARTENAIRE_SUPER_ADMIN
  POINT_RELAIS
  POINT_RELAIS_ADMIN
  POINT_RELAIS_SUPER_ADMIN
}

enum ModeEchange {
  DON_GRATUIT
  PRET_TEMPORAIRE
  LOCATION_SOLIDAIRE
}

enum NiveauTier {
  BRONZE
  ARGENT
  OR
  LEGENDE
}

enum StatutTransaction {
  EN_ATTENTE_RECEPTION
  EN_COURS
  EN_ATTENTE_RETOUR
  TERMINEE
  ANNULEE
  LITIGE_DEGRADATION
}

enum CategorieAnnonce {
  POUSSETTE
  BRICOLAGE
  MEDICAL
  EVENEMENTIEL
  NOURRITURE
  AUTRE
}

enum TypeRelais {
  HANOUT
  MOSQUEE
  ASSOCIATION_QUARTIER
}

enum TypeBadge {
  BIENVENUE
  DONATEUR_BARAKA
  SAUVEUR_ALIMENTAIRE
  VOISIN_DE_CONFIANCE
  AMBASSADEUR_LOCAL
  GARANT_SOLIDAIRE
  CHAMPION_ECO
}

enum Langue {
  ARABE
  FRANCAIS
  AMAZIGH
  BILINGUE
}

enum StatutAnnonce {
  DISPONIBLE
  RESERVEE
  TERMINEE
  EXPIREE
}

enum ConditionAnnonce {
  NEUF
  BON_ETAT
  USE
}

enum TypeMouvementWallet {
  DEPOT
  BLOCAGE
  DEBLOCAGE
  RETRAIT
}

' ─────────────── MODELS ───────────────

class User {
  + id : String
  + email : String
  + motDePasseHash : String
  + telephone : String
  + role : RoleUtilisateur
  + dateInscription : DateTime
  + emailVerified : Boolean
  + telephoneVerified : Boolean
  + isBlocked : Boolean
}

class Profil {
  + id : String
  + nom : String?
  + prenom : String?
  + cin : String?
  + adresseComplete : String?
  + ville : String?
  + lBarakaScore : Int
  + palier : NiveauTier
  + badges : TypeBadge[]
  + langueInterface : Langue
  + photoProfil : String?
  + dateNaissance : DateTime?
  + utilisateurId : String
}

class Annonce {
  + id : String
  + titre : String
  + description : String
  + statut : StatutAnnonce
  + categorie : CategorieAnnonce
  + mode : ModeEchange
  + estFoodRescue : Boolean
  + dateExpiration : DateTime?
  + prixSymbolique : Decimal?
  + montantCaution : Decimal?
  + photos : String[]
  + geolocalisation : Float[]
  + dateCreation : DateTime
  + nombreVues : Int
  + condition : ConditionAnnonce
  + createurId : String
}

class Portefeuille {
  + id : String
  + soldeReel : Decimal
  + soldeBloque : Decimal
  + devise : String
  + dateMiseAJour : DateTime
  + utilisateurId : String
}

class MouvementWallet {
  + id : String
  + montant : Decimal
  + type : TypeMouvementWallet
  + date : DateTime
  + utilisateurId : String
  + portefeuilleId : String
}

class PointRelais {
  + id : String
  + nom : String
  + type : TypeRelais
  + capaciteStockage : Int
  + adresse : String
  + geolocalisation : Float[]
  + horaires : String[]
  + telephone : String
  + photo : String?
}

class Transaction {
  + id : String
  + annonceId : String
  + emprunteurId : String
  + preteurId : String
  + qrCodeReception : String?
  + qrCodeRetour : String?
  + qrCodeToken : String?
  + isQrUsed : Boolean
  + statut : StatutTransaction
  + dateDebut : DateTime?
  + dateFinPrevue : DateTime?
  + dateFinReelle : DateTime?
  + montantCautionBloquee : Decimal?
  + pointRelaisId : String?
  + scannedReception : Boolean
  + scannedRetour : Boolean
  + retard : Int
  + degats : Boolean
}

class Contrat {
  + id : String
  + numContrat : String
  + urlPdfBilingue : String
  + hashSignature : String
  + transactionId : String
  + dateGeneration : DateTime
  + langue : Langue
}

class Notification {
  + id : String
  + titre : String
  + message : String
  + lu : Boolean
  + dateCreation : DateTime
  + utilisateurId : String
}

' ─────────────── RELATIONS ───────────────

User "1" --> "0..1" Profil           : has
User "1" --> "0..*" Annonce          : creates
User "1" --> "0..1" Portefeuille     : owns
User "1" --> "0..*" MouvementWallet  : has
User "1" --> "0..*" Transaction      : preteur
User "1" --> "0..*" Transaction      : emprunteur
User "1" --> "0..*" Notification     : receives

Portefeuille "1" --> "0..*" MouvementWallet : historique

Annonce "1" --> "0..*" Transaction : concerns

PointRelais "1" --> "0..*" Transaction : hosts

Transaction "1" --> "0..1" Contrat : generates

@enduml
